# image2bag

./: .gitignore  CMakeLists.txt  package.xml
binary/: bag_write
include/: utils.h
include/OBS/: .eSDKOBS.h.swp  demo_common.h
include/rosbag_direct_write/: direct_bag_impl.h
include/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfo.h  SetCameraInfoRequest.h  SetCameraInfoResponse.h  Temperature.h  TimeReference.h
include/std_msgs/: Bool.h  Byte.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float32MultiArray.h  Float64.h  Float64MultiArray.h  Header.h  Int16.h  Int16MultiArray.h  Int32.h  Int32MultiArray.h  Int64.h  Int64MultiArray.h  Int8.h  Int8MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16MultiArray.h  UInt32.h  UInt32MultiArray.h  UInt64.h  UInt64MultiArray.h  UInt8.h  UInt8MultiArray.h
src/: demo_common.c  direct_bag.cpp  main.cpp  utils.cpp
